--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx.media.jar",
         "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
         "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
-        "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar"
+        "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar",
+        "d:\\Folders\\Coding\\-Tools\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar"
     ]
 }
