--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
         "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
         "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
         "d:\\Folders\\Coding\\-Tools\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar",
-        "d:\\Folders\\Coding\\-Tools\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar"
+        "sqlite-jdbc-3.45.3.0.jar",
+        "d:\\Folders\\Coding\\-Tools\\sqlite-jdbc\\slf4j-api-1.7.36.jar",
+        "d:\\Folders\\Coding\\-Tools\\sqlite-jdbc\\sqlite-jdbc-3.45.3.0.jar",
+        "d:\\Folders\\Coding\\-Tools\\sqlite-jdbc\\slf4j-simple-1.7.36.jar"
     ]
 }
